style.css
@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');

:root{
    --very-dark-magenta: hsl(300, 43%, 22%);
    --soft-pink: hsl(333, 80%, 67%);
    --dark-grayish-magenta: hsl(303, 10%, 53%);
    --light--grayish-magenta: hsl(300, 24%, 96%);
    --white: hsl(0, 0%, 100%);
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    max-width: 100%;
    font-family: Spartan;
    font-size: 15px;
}

h1, h3{/*hero settings*//*hero settings*/
    color: var(--very-dark-magenta);
    width: 100vw;
}

.hero{
    width: 83%;
    text-align: center;
    margin: 2rem;
    margin-bottom: 3.5rem;
}

.hero h1{
    margin: auto;
    margin-bottom: 1rem;
}/*hero settings*//*hero settings*/

.stars{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 25vw;
    text-align: center;
    line-height: 2;
    margin: auto;
    margin-bottom: 4rem;
}

.reviewer{/*reviewer settings*//*reviewer settings*/
    width: 90vw;
    border-radius: 10px;
    background-color: var(--very-dark-magenta);
    color: white;
    padding: 1.5rem;
    margin: 3rem;
}

.bold{
    font-weight: bold;
}

.avatar{
    display: flex;
    align-items: center;
    gap: 5%;
    padding-bottom: 1.5rem;
    
}

.avatar img{
    border-radius: 50%;
    width: 15%;
}

.buyer{
    color: var(--soft-pink);
}

.name{
    display: flex;
    flex-direction: column;
}/*reviewer settings*//*reviewer settings*/

.attribution{
    font-size: 11px;
    text-align: center;
}
.attribution a{
    color: hsl(228, 45%, 44%);
}

@media screen and (min-width: 1024px){
    .desktopRow1{
        text-align: center;
        width: 70%;
        display: flex;
        align-items: center;
        margin-right: 3.75rem;
    }
    .desktopRow2{
        margin: 2rem;
        padding: 5rem;
        display: flex;
    }
    .colton{
        position: relative;
        bottom: 2rem;
    }
    .anne{
        position: relative;
        top: 2rem;
    }
    .stars{
        position:relative;
        right: 10%;
        text-align: start;
        line-height: 4rem;
    }
    .reviews{
        width: 500px;
        display: flex;
        align-items: center;
        gap: 15px;
    }
    .reportguru{
        width: 500px;
        display: flex;
        align-items: center;
        position: relative;
        left: 15%;
        gap: 15px;
    }
    .besttech{
        width: 500px;
        display: flex;
        align-items: center;
        position: relative;
        left: 30%;
        gap: 15px;
    }
    .stars img{
        width: 17px;
        height: 16px;
    }
    .hero{
        text-align: start;
    }

    .hero h1 {
        font-size: 3em;
        width: 55%;
        margin: 1rem 0;
    }

    .hero p {
        width: 50%;
    }

    .reviewer {
        width: 20vw;
    }
}

